Fix title alignment for IOS

--- a/src/components/views/header/Header.view.scss
+++ b/src/components/views/header/Header.view.scss
@@ -5,6 +5,9 @@
 
   &__title {
     padding: 3rem;
-    text-align: center;
+
+    & h1 {
+      text-align: center;
+    }
   }
 }
